



@startuml

title "Nextbbs - ER Diagram"

package Nextbbs <<Frame>> {

class Category {
  + id [PK]
  ---
  # parent_category_id
  title: string
}

class Board {
  + id [PK]
  ---
  owner_id: bigint [FK]
  title: string
  description: text
}


class Topic {
  +id [PK]
  ---
  # board_id [FK]
  owner_id: bigint [FK]
  title: string
  comments_count: integer
  created_at: datetime
  updated_at: datetime
}

class Comment {
  +id [PK]
  ---
  # topic_id [FK]
  owner_id: bigint [FK]
  name: string
  email: string
  body: text
  hashid:   string
  ip_address: ip
  meta: text
  status: integer
  created_at: datetime
  ---
  has_many comment_logs
  change_and_log!()
}

class CommentLog {
  +id [PK]
  ---
  comment_id: bigint [FK]
  revision: integer
  ---
  name: string
  email: string
  body: text
  hashid:   string
  ip_address: ip
  meta: text
  status: integer
  created_at: datetime
  ---
  belongs_to comment
}


Category o-down-o{ Board
Board    o--o{ Topic
Topic    o--|{ "1..N" Comment
Comment    o-right-|{ "1..N" CommentLog

(Category,Board) ... CategoryBoard

}

' package UsersApp <<Frame>> {
'   class User {
'     +id [PK]
'   }
'   User o--o{ Board
'   User o--o{ Topic
'   User o--|{ "1..N" Comment
' }

@enduml

// 関係
    ------   :1
    ----||   :1 and only 1
    ----o|   :0 or 1
    -----{   :many
    ----|{   :1 or more
    ----o{   :0 or many


// http://itref.fc2web.com/technology/entity_relationship_diagram.html
// https://qiita.com/Tachy_Pochy/items/752ef6e3d38e970378f0